changed url for master playlist
